--- a/src/Components/Meals/Meals.css
+++ b/src/Components/Meals/Meals.css
@@ -8,3 +8,13 @@
 .details {
   margin-left: 10px;
 }
+
+.search-container {
+  background-color: rgba(0, 0, 0, 0.583);
+  padding: 15px;
+  text-align: center;
+}
+.search-container input {
+  width: 50%;
+  padding: 5px;
+}
